Details
-
Type:
Bug
-
Status: Resolved
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 0.10.0
-
Fix Version/s: 0.10.0
-
Component/s: None
-
Labels:None
-
Environment:Windows
Description
on unicodehelper.cpp at line 95
////////
#if defined(_WIN32)
unsigned int UnicodeHelper::decodeWide(const wchar_t*& src, const wchar_t* srcEnd) {
unsigned int sv = *(src++);
if (sv < 0xDC00 || sv >= 0xDC00)
/////
according to unicodhelper.h the line should be "#if LOG4CXX_HAS_WCHAR_T"