LOGCXX-107: compile failure with has.wchar_t=0 on Windows